# dynpric

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  t.py  t2.py
.github/workflows/: main.yaml
src/dynpric/: __init__.py  market.py  priors.py  seller.py  simulation_engine.py  types.py
src/dynpric/demand/: ferreira2018.py  informs.py  informs2017.py
src/dynpric/firms/: ferreira2018.py  informs.py  informs2017.py  random.py  thompson.py
tests/: optimization_test.py  test_priors.py
tests/firms/: thompson_test.py
