[metadata]
name = dynpric
version = 0.1.0
description = Tooling for dynamic pricing simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denismaciel/dynpric
author = Denis Maciel
author_email = 'denispmaciel@gmail.com'
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.8.0
package_dir =
    = src

[options.packages.find]
where = src

[flake8]
ignore =
    E501,
    W293,
    W291,
    E712, # allow x == True because of DataFrames
    E123, # closing bracket does not match indentation of opening bracket's line
    E124, # closing bracket does not match visual indentation
    E126, # continuation line over-indented for hanging indent
    E127, # continuation line over-indented for visual indent
    E203, # no whitespace before ':'
    E231, # missing whitespace after ','
    E261, # at least two spaces before inline comment
    E266, # too many leading '#' for block comment
    E271, # multiple spaces after keyword
    E303, # too many blank lines
    E741, # ambiguous variable name
    W391, # blank line at end of file
    W503, # line break before binary operator
    W504, # line break after binary operator

[mypy]
check_untyped_defs = true
disallow_any_expr = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
